Fix code wrap, see Superfluid L3

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -89,6 +89,7 @@ code {
 figure,
 pre {
   margin: 0;
+  white-space: pre-wrap;
 }
 
 li {
